# kamino-vault-counterfactuals

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: main_market_2026-05-21.json  main_market_2026-05-22.json
src/kvcf/: __init__.py  __main__.py  detectors.py  diff.py  fetch.py  html_report.py  report.py  runner.py  state.py  synthetic.py
tests/: test_cli_and_report.py  test_detectors.py  test_diff_and_synthetic.py  test_state.py
