[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kamino-vault-counterfactuals"
version = "0.1.1"
description = "Historical replay + counterfactual stress testing for Kamino Lend reserves on Solana."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Max Gorbuk" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "mypy>=1.8",
  "pandas>=2.0",
  "matplotlib>=3.8",
]
[project.scripts]
kvcf = "kvcf.__main__:main"

[project.urls]
Homepage = "https://github.com/mkzung/kamino-vault-counterfactuals"
Repository = "https://github.com/mkzung/kamino-vault-counterfactuals"
Issues = "https://github.com/mkzung/kamino-vault-counterfactuals/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kvcf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
