[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kamino-vault-counterfactuals"
version = "0.2.0"
description = "Counterfactual stress testing for Kamino Lend reserves on Solana — six pure-function detectors plus a fixture-based historical replay CLI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Max Gorbuk" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
  "base58>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "mypy>=1.8",
]
[project.scripts]
kvcf = "kvcf.__main__:main"

[project.urls]
Homepage = "https://github.com/mkzung/kamino-vault-counterfactuals"
Repository = "https://github.com/mkzung/kamino-vault-counterfactuals"
Issues = "https://github.com/mkzung/kamino-vault-counterfactuals/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kvcf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
# CI matrix tests 3.10 / 3.11 / 3.12; mypy checks against the newest
# supported version so we catch features we'd accidentally use beyond
# the floor. The `requires-python = ">=3.10"` declaration in `[project]`
# remains the source of truth for the minimum.
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
